Fixing the layout bug.

--- a/src/css/styles/_header.scss
+++ b/src/css/styles/_header.scss
@@ -26,64 +26,65 @@
     justify-content: space-between;
     align-items: center;
     width: 100%;
-
-    &__logo {
-      display: block;
-      height: 38px;
+  }
   
-      @media (min-width: 1260px) {
-       font-size: 80px; 
+  &__logo {
+    display: block;
+    height: 38px;
+
+    @media (min-width: 1260px) {
+     font-size: 80px; 
+    }
+  }
+
+  &__icons {
+    display: flex;
+    gap: 20px;
+    cursor: pointer;
+
+    @media (min-width: 744px) {
+      display: inline-flex; 
+      align-items: center;
+      gap: 16px;
+    }
+  }
+
+  &__phone-number {
+    @media (min-width: 744px) {
+      display: inline-block;
+      order: 1;
+      font-size: 14px;
+      color: $font-color-white;
+      white-space: nowrap;
+      transition: opacity 0.3s ease;
+    }
+
+    .number{
+      display: none;
+      font-size: 14px;
+      color: $font-color-white;
+      white-space: nowrap;
+      opacity: 0;
+      visibility: hidden;
+      transition: opacity 0.3s ease;
+
+      @media (min-width:744px){
+        display: inline-block;
       }
     }
 
-    &__icons {
-      display: flex;
-      gap: 20px;
+    &:hover .number{
+      visibility: visible;
+      opacity: 1;
+    }
+  }
+
+  &__burger {
+    @media (min-width: 744px) {
+      order: 3;
+      width: 24px;
+      height: 24px;
       cursor: pointer;
-
-      @media (min-width: 744px) {
-        display: inline-flex; 
-        align-items: center;
-        gap: 16px;
-      }
-
-      &__phone-number {
-        display: none;
-
-        @media (min-width: 744px) {
-          display: inline-block;
-          order: 1;
-          font-size: 14px;
-          color: $font-color-white;
-          white-space: nowrap;
-          opacity: 0;
-          visibility: hidden;
-          transition: opacity 0.3s ease;
-        }
-      }
-
-      &__phone-call {
-        @media (min-width: 744px) {
-          order: 2;
-          width: 24px;
-          height: 24px;
-          cursor: pointer;
-
-          &:hover + .header__menu__icons__phone-number {
-            visibility: visible;
-            opacity: 1;
-          }
-        }
-      }
-
-      &__burger {
-        @media (min-width: 744px) {
-          order: 3;
-          width: 24px;
-          height: 24px;
-          cursor: pointer;
-        }
-      }
     }
   }
 
